# Rstreams

./: INDEX  Readme.txt  TITLE  cleanup  configure  configure.in
R/: Rstreams.R  data.restore.R  splusread.R  zzz.R
man/: allstreams.Rd  copy.Rd  getstreameol.Rd  hexdump.Rd  inttostr.Rd  openstream.Rd  readsfile.Rd  seek.Rd  splusread.Rd  streamread.Rd  streamwrite.Rd  truncate.Rd
src/: Makevars  Rstreams.c  config.h  config.h.in
