AC_INIT(src/Rstreams.c)
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
  echo "could not determine R_HOME"
  exit 1
fi
CC=`grep "^CC" ${R_HOME}/etc/Makeconf | sed "s/^CC *= *//"`
CFLAGS=`grep "^CFLAGS" ${R_HOME}/etc/Makeconf | sed "s/^CFLAGS *= *//"`
AC_CONFIG_HEADER(src/config.h)
AC_CHECK_FUNCS(ftruncate)
AC_CHECK_SIZEOF(long double, 0)
AC_OUTPUT()
